<resources>
    <string name="app_name">PopMovies</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="action_share">Share</string>
    <string name="go_top">Slide to top</string>
    <string name="action_sort">Sort</string>
    <string name="action_pop">Popularity</string>
    <string name="action_high">Highest rated</string>
    <string name="action_fav">Favorites</string>
    <string name="detail_trailer">Trailers</string>
    <string name="detail_reviews">Reviews</string>
    <string name="detail_overview">Overview</string>
    <string name="no_conn">No connection.</string>
    <string name="see_more">See more</string>
    <string name="no_trail">No trailers found.</string>
    <string name="no_revs">No reviews found.</string>
    <string name="title_activity_settings">Settings</string>
    <string name="choose_mov">Please choose a movie.</string>
</resources>
