<?xml version="1.0" encoding="utf-8"?><!--
/**
 * Copyright (C) 2015 Mohamed Fathy
 * <p/>
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 * <p/>
 * http://www.apache.org/licenses/LICENSE-2.0
 * <p/>
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="MissingPrefix">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:focusableInTouchMode="true"
        android:orientation="horizontal">

        <android.support.v7.widget.CardView
            android:id="@+id/detailCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginTop="3dp"
            android:orientation="vertical"
            card_view:cardCornerRadius="2dp"
            card_view:cardElevation="4dp"
            card_view:cardPreventCornerOverlap="false">

            <ImageView
                android:id="@+id/detailPoster"
                android:layout_width="150dp"
                android:layout_height="220dp"
                android:scaleType="centerCrop" />

        </android.support.v7.widget.CardView>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5">

            <LinearLayout
                android:id="@+id/dateLinear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="8dp"
                android:paddingTop="8dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/date_calendar"
                    android:tint="@android:color/black" />

                <TextView
                    android:id="@+id/detailDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="2dp"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/durLinear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/dateLinear"
                android:orientation="horizontal"
                android:paddingLeft="8dp"
                android:paddingTop="8dp">

                <ImageView
                    android:layout_width="23dp"
                    android:layout_height="23dp"
                    android:paddingLeft="2dp"
                    android:src="@drawable/de_duration"
                    android:tint="@android:color/black" />

                <TextView
                    android:id="@+id/detailDur"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="2dp"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/voteLinear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/durLinear"
                android:orientation="horizontal"
                android:paddingLeft="8dp"
                android:paddingTop="8dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/star_vote"
                    android:tint="@android:color/black" />

                <TextView
                    android:id="@+id/detailVoteAvr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="2dp"
                    android:textSize="14sp" />
            </LinearLayout>
        </RelativeLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/detailFav"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:clickable="true"
                android:padding="12dp"
                android:src="@drawable/un_favorite"
                android:tint="@android:color/black" />

            <ImageView
                android:id="@+id/detailUnFav"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:clickable="true"
                android:padding="12dp"
                android:src="@drawable/favorite"
                android:tint="@android:color/black"
                android:visibility="gone" />

        </FrameLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="#c7d2d2d2" />

    <TextView
        fontPath="fonts/Bold.ttf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:paddingTop="8dp"
        android:text="@string/detail_overview"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/detailOverview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:paddingBottom="12dp"
        android:paddingLeft="20dp"
        android:paddingRight="12dp"
        android:paddingTop="12dp"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="#c7d2d2d2" />

    <TextView
        fontPath="fonts/Bold.ttf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:paddingLeft="8dp"
        android:paddingTop="8dp"
        android:text="@string/detail_trailer"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ListView
            android:id="@+id/detail_trailers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:divider="@android:color/transparent"
            android:listSelector="@drawable/list_selector"
            android:scrollbars="none" />

        <TextView
            android:id="@+id/noTrails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="12dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:text="@string/no_trail"
            android:textSize="16sp"
            android:visibility="gone" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="#c7d2d2d2" />

    <TextView
        fontPath="fonts/Bold.ttf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:paddingLeft="8dp"
        android:paddingTop="8dp"
        android:text="@string/detail_reviews"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/revsList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:orientation="vertical" />

        <TextView
            android:id="@+id/noRevs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="12dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:text="@string/no_revs"
            android:textSize="16sp"
            android:visibility="gone" />

    </RelativeLayout>
</LinearLayout>